<resources>
    <string name="app_name">CS639SpringHW7_LiangDai</string>
    <string name="action_settings">Settings</string>
    <string name="no_word">No Word</string>

    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="button_update">Update</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="hint_word_def">Word definition...</string>

    <string name="radio_btn_none">None</string>
    <string name="radio_btn_adj">Adjective</string>
    <string name="radio_btn_adv">Adverb</string>
    <string name="radio_btn_prep">Prepostion</string>

    <string name="the_word_was_already_exist">The word was already exist, please type in a new word</string>
    <string name="successfully_add_the_word">Successfully add the word</string>
    <string name="successfully_update_the_word">Successfully update the word</string>
    <string name="update_word_failed">Update word failed, please try again.</string>


</resources>
